# cloud-security-posture-monitor

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
docs/: cis_benchmark_coverage.md
src/cspm/: __init__.py  cli.py  config.py  models.py  scanner.py
src/cspm/alerting/: console.py  slack.py
src/cspm/checks/: __init__.py  base.py  cloudtrail_checks.py  iam_checks.py  password_policy.py  rds_checks.py  s3_checks.py  sg_checks.py
src/cspm/reporting/: cis_mapping.py  html_report.py  json_report.py
src/cspm/storage/: sqlite_store.py
templates/: report.html.j2
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/secure_baseline/: main.tf
terraform/modules/vulnerable/: main.tf
tests/integration/: test_localstack_scan.py
tests/unit/: test_cis_mapping.py  test_iam_checks.py  test_models.py  test_s3_checks.py  test_sg_checks.py
